objects/SCP_Certa_GC__PastActivity__c.object
<CustomObject>
    <description>Object that contains past activity with client</description>
    <fields>
        <fullName>SCP_Certa_GC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Past_Activitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Net_Activity_With_Client__c</fullName>
        <formula>IF((SCP_Certa_GC__b__c - SCP_Certa_GC__cc__c) == 0, 0.00, (SCP_Certa_GC__b__c - SCP_Certa_GC__cc__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Share_of_Wallet__c</fullName>
        <formula>SCP_Certa_GC__b__c / SCP_Certa_GC__a__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share of Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__a__c</fullName>
        <label>Total Client ICT Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__b__c</fullName>
        <label>Our Total Revenue from Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__cc__c</fullName>
        <label>Our Expenditures with Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__endDate__c</fullName>
        <label>Fecha de Cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__initDate__c</fullName>
        <label>Fecha de Inicio</label>
        <type>Date</type>
    </fields>
    <label>SCP Past Activity</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCP Past Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>